--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,19 @@
             "email": "pokoot@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "symfony/console": "*",
+        "illuminate/support": "*",
+        "illuminate/database": "~4.2",
+        "pimple/pimple" : "~3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
     },
     "autoload": {
+        "classmap" : [
+            "src/models"
+        ],
         "psr-4": {
             "Groovey\\Migration\\": "src"
         }
