--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,12 @@
     ],
     "require": {
         "symfony/console": "*",
+        "symfony/yaml" : "*",
+        "symfony/config" : "*",
+        "symfony/finder" : "*",
+        "pimple/pimple" : "~3.0",
         "illuminate/support": "*",
-        "illuminate/database": "~4.2",
-        "pimple/pimple" : "~3.0"
+        "illuminate/database": "~4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
