--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,9 @@
         }
     ],
     "require": {
-        "symfony/console": "*",
-        "symfony/yaml" : "*",
-        "symfony/config" : "*",
-        "symfony/finder" : "*",
-        "pimple/pimple" : "~3.0",
-        "illuminate/support": "*",
-        "illuminate/database": "~4.2"
+        "symfony/console": "~3.0",
+        "symfony/finder": "~3.0",
+        "illuminate/database": "~5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
