--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,13 @@
     "require": {
         "symfony/console": "~3.0",
         "symfony/finder": "~3.0",
-        "illuminate/database": "~5.2"
+        "doctrine/dbal" : "~2.5",
+        "doctrine/orm"  : "~2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
     },
     "autoload": {
-        "classmap" : [
-            "src/models"
-        ],
         "psr-4": {
             "Groovey\\Migration\\": "src"
         }
