--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         }
     ],
     "require": {
-        "symfony/console": "~3.0",
-        "symfony/finder": "~3.0",
+        "symfony/console": "~3.1",
+        "symfony/finder": "~3.1",
+        "symfony/yaml"  : "~3.1",
         "doctrine/dbal" : "~2.5",
         "doctrine/orm"  : "~2.5"
     },
