--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "doctrine/orm"  : "~2.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "~4.8"
     },
     "autoload": {
         "psr-4": {
