--- a/database/migrations/001_users.yml
+++ b/database/migrations/001_users.yml
@@ -6,9 +6,11 @@ UP: >
 
     CREATE TABLE `users` (
     `id` int(11) NOT NULL,
+    `status` ENUM('ACTIVE', 'INACTIVE'),
     `name` varchar(200) COLLATE utf8_unicode_ci NOT NULL,
     `email` varchar(200) COLLATE utf8_unicode_ci NOT NULL,
-    `created_at` datetime NOT NULL
+    `created_at` datetime NOT NULL,
+    `modified_at` datetime NOT NULL
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
     ALTER TABLE `users` ADD KEY `id` (`id`);
