Changed to sample

--- a/database/migrations/001_sample.yml
+++ b/database/migrations/001_sample.yml
@@ -4,21 +4,21 @@
 # Run the migration
 UP: >
 
-    CREATE TABLE `users` (
+    CREATE TABLE `sample` (
     `id` int(11) NOT NULL,
-    `status` ENUM('ACTIVE', 'INACTIVE'),
+    `status` ENUM('active', 'inactive'),
     `name` varchar(200) COLLATE utf8_unicode_ci NOT NULL,
     `email` varchar(200) COLLATE utf8_unicode_ci NOT NULL,
     `created_at` datetime NOT NULL,
     `modified_at` datetime NOT NULL
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
-    ALTER TABLE `users` ADD KEY `id` (`id`);
+    ALTER TABLE `sample` ADD KEY `id` (`id`);
 
-    ALTER TABLE `users` CHANGE `id` `id` INT(11) NOT NULL AUTO_INCREMENT;
+    ALTER TABLE `sample` CHANGE `id` `id` INT(11) NOT NULL AUTO_INCREMENT;
 
 
 # Reverse the migration
 DOWN: >
 
-    DROP TABLE users;
+    DROP TABLE sample;
