Implemented using tester service provider

--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
         }
     ],
     "require": {
-        "illuminate/database" : "~5.2",
-        "illuminate/events": "~5.2",
+        "silex/silex" : "~2.0",
         "symfony/console": "~3.0",
         "symfony/finder": "~3.0",
         "symfony/yaml"  : "~3.0",
-        "groovey/support" : "dev-master"
+        "groovey/db" : "dev-master",
+        "groovey/support" : "dev-master",
+        "groovey/tester" : "dev-master"
     },
     "autoload": {
         "psr-4": {
