--- a/database/migrations/001_create_user_information.yml
+++ b/database/migrations/001_create_user_information.yml
@@ -4,6 +4,8 @@ changelog: User information.
 
 up: >
 
+    DROP TABLE IF EXISTS users;
+
     CREATE TABLE `users` (
     `id` int(11) NOT NULL,
     `status` ENUM('active', 'inactive'),
