--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/console": "~3.0",
         "symfony/finder": "~3.0",
         "symfony/yaml"  : "~3.0",
+        "groovey/console" : "dev-master",
         "groovey/db" : "dev-master",
         "groovey/support" : "dev-master",
         "groovey/tester" : "dev-master"
